--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -175,7 +175,7 @@ p {
 
 .active a {
     background: none !important;
-    color: #fff !important;
+    color: #4500B7 !important;
 }
 
 .sticky-header .navbar-nav > li > a {
