--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -28,9 +28,14 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+
     
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-cookies.min.js"></script>
+    <script data-require="angular-animate@1.6.*" data-semver="1.6.5" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"></script>
+    <script data-require="angular-touch@1.6.*" data-semver="1.6.2" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular-touch.js"></script>
+    <script data-require="ui-bootstrap@*" data-semver="2.5.0" src="https://cdn.rawgit.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-2.5.0.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
     <!-- End App Libraries -->
@@ -39,6 +44,8 @@
     <script src="app/app.js"></script>
     <script src="app/services/authService.js"></script>
     <script src="app/services/initialDataService.js"></script>
+    <!-- <script src="app/controllers/signupModalController.js"></script> -->
+    <script src="app/controllers/signupModalContentController.js"></script>
     <script src="app/controllers/signinController.js"></script>
     <script src="app/controllers/signup/signupParentController.js"></script>
     <script src="app/controllers/signup/signupStudentController.js"></script>
